--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,5 +1,4 @@
 .table-container {
-    color: white;
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -15,6 +14,7 @@
   }
 
   .edit-icon {
+    cursor: pointer;
     font-size: small;
     padding-right: 7px;
   }
