--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -21,7 +21,6 @@
 }
 
 .title {
-    color: white;
     margin-left: 7px;
 }
 
@@ -30,7 +29,7 @@
     align-items: center;
 }
 
-.button {
+.add-token-button {
     background-color: #AA33B5;
     border: 1px solid #AA33B5;
     border-radius: 7px;
