--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -29,7 +29,7 @@
     align-items: center;
 }
 
-.add-token-button {
+.button {
     background-color: #AA33B5;
     border: 1px solid #AA33B5;
     border-radius: 7px;
@@ -44,10 +44,9 @@
     width: 110px;
 }
 
-.button:active {
+.button:hover {
+    background-color: #AA50B5;
     align-items: center;
-    width: 90px;
-    height: 25px;
     transition: 0.2ms;
 }
 
