--- a/src/pages/AddToken.css
+++ b/src/pages/AddToken.css
@@ -99,3 +99,18 @@
     align-items: center;
     transition: 0.2ms;
 }
+
+@media ( min-width: 768px ) {
+    .shooting-star {
+    width: 4rem;
+    height: 4rem;
+    }
+    .title {
+        margin-left: 7px;
+        margin-top: 25px;
+        font-size: 2.5rem;
+    }
+    .add-button {
+        margin-top: 25px;
+    }
+}
