--- a/src/pages/EditToken.css
+++ b/src/pages/EditToken.css
@@ -75,3 +75,31 @@
     align-items: center;
     transition: 0.2ms;
 }
+
+@media ( max-width: 431px ) {
+    .edit-token-text {
+        margin-right: 2.5rem;
+    }
+    .edit-button {
+        align-items: center;
+        border-radius: 5px;
+        height: 1.5rem;
+        width: 4.5rem;
+        font-size: 0.6rem;
+    }
+    .edit-token-button {
+        align-items: center;
+        border-radius: 5px;
+        font-size: 0.6rem;
+        height: 1.5rem;
+        margin: 20px 0 0 4.5rem;
+        width: 4.5rem;
+    }
+    .remove-token-button {
+        align-items: center;
+        border-radius: 5px;
+        font-size: 0.6rem;
+        height: 1.5rem;
+        width: 4.5rem;
+    }
+}
